--- a/src/build.gradle
+++ b/src/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.xiaomabao.weidian"
         minSdkVersion 16
         targetSdkVersion 24
-        versionCode 10
-        versionName "1.09"
+        versionCode 11
+        versionName "1.10"
     }
 
     compileOptions {
@@ -84,4 +84,5 @@ dependencies {
     compile files('libs/alipaySingle-20160516.jar')
     compile files('libs/libammsdk.jar')
     compile files('libs/alipaySdk-20160516.jar')
+    compile 'com.orhanobut:logger:1.15'
 }
