--- a/src/build.gradle
+++ b/src/build.gradle
@@ -4,14 +4,16 @@ apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'realm-android'
 android {
     compileSdkVersion 24
-    buildToolsVersion "23.0.0"
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         applicationId "com.xiaomabao.weidian"
         minSdkVersion 19
         targetSdkVersion 24
-        versionCode 11
-        versionName "1.10"
+//        versionCode 12
+        versionCode 13
+//        versionName "1.2"  2017.4.28
+        versionName "1.3"
     }
 
     compileOptions {
@@ -38,21 +40,21 @@ android {
         安智市场 {}
         优亿市场 {}
         应用汇 {}
-        联想乐 {}
+//        联想乐 {}
         联想沃 {}
         魅族 {}
         木蚂蚁 {}
         搜狗手机助手 {}
-        应用酷 {}
-        历趣市场 {}
-        蘑菇市场 {}
+//        应用酷 {}
+//        历趣市场 {}
+//        蘑菇市场 {}
         冒泡网 {}
-        苏宁 {}
+//        苏宁 {}
         机锋 {}
-        搞趣网 {}
-        wifi万能钥匙 {}
-        泰康人寿 {}
-        地推0603{}
+//        搞趣网 {}
+//        wifi万能钥匙 {}
+//        泰康人寿 {}
+//        地推0603 {}
     }
 
     productFlavors.all { flavor ->
