--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -22,14 +22,17 @@
         android:theme="@style/AppTheme"
         tools:replace="android:icon,android:theme">
         <activity
-            android:name=".views.GuideActivity"
-            android:theme="@style/StartTheme"
-            android:screenOrientation="portrait">
+            android:name=".views.WelcomeActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/StartTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name=".views.GuideActivity"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".views.MainActivity"
             android:screenOrientation="portrait"></activity>
@@ -88,7 +91,9 @@
             android:screenOrientation="portrait"></activity>
 
         <!---->
-
+        <activity
+            android:name=".views.SubCatrgoryActivity"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".views.ShopSettingActivity"
             android:screenOrientation="portrait"></activity>
